--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-# Simulatore CARLA
+
 carla==0.9.15
-numpy
-opencv-python
+numpy<=1.21.6
+opencv-python==4.8.0.76
 torch
 torchvision
 pygame==2.6.1
